[gd_scene load_steps=3 format=3 uid="uid://cq21w4w0f54f0"]

[ext_resource type="Script" path="res://scenes/ui/game_over_screen.gd" id="1_aik4h"]

[sub_resource type="LabelSettings" id="LabelSettings_em2xe"]
font_size = 80

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aik4h")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.211765, 0.211765, 0.211765, 0.721569)

[node name="GameOver" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -163.5
offset_right = 163.5
offset_bottom = 140.0
grow_horizontal = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_em2xe")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Win" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -163.5
offset_right = 163.5
offset_bottom = 140.0
grow_horizontal = 2
text = "You Win"
label_settings = SubResource("LabelSettings_em2xe")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.5
offset_top = -159.0
offset_right = 263.5
offset_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.5
offset_top = -45.5
offset_right = 154.5
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2

[node name="Retry" type="Button" parent="Panel/HSplitContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Retry"

[node name="Quit" type="Button" parent="Panel/HSplitContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Quit"

[connection signal="pressed" from="Panel/HSplitContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Panel/HSplitContainer/Quit" to="." method="_on_quit_pressed"]
